<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditText"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="25dp"
        android:hint="@string/main_parametre"
        app:layout_constraintBottom_toTopOf="@+id/textViewSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="@string/parametre_1"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView" />


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        app:layout_constraintStart_toStartOf="@+id/textViewSize"
        app:layout_constraintTop_toBottomOf="@+id/textViewSize">


        <RadioButton
            android:id="@+id/radioSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_small" />

        <RadioButton
            android:id="@+id/radioBig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_big" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:text="@string/parametre_2"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/margherita"
        app:layout_constraintStart_toStartOf="@+id/margherita" />


    <CheckBox
        android:id="@+id/margherita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/margherita"
        app:layout_constraintBottom_toTopOf="@+id/four_cheese"
        app:layout_constraintStart_toStartOf="@+id/four_cheese" />

    <CheckBox
        android:id="@+id/four_cheese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="162dp"
        android:layout_marginEnd="64dp"
        android:text="@string/four_cheese"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:onClick="showOrder"
        android:text="@string/ok"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/buttonLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:onClick="launchLogs"
        android:text="@string/log"
        app:layout_constraintStart_toStartOf="@+id/four_cheese"
        app:layout_constraintTop_toBottomOf="@+id/four_cheese" />

    <TextView
        android:id="@+id/output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />


</androidx.constraintlayout.widget.ConstraintLayout>